# avtl

./: .clangd  CMakeLists.txt
include/avtl/: vector.hpp
tests/: CMakeLists.txt  test_vector.cpp
